# azuresqlmirror

./: .env.template  .gitignore  README.md  pyproject.toml
infra/: deploy.ps1  main.bicep
notebooks/: 01_create_schema.ipynb  02_load_sample_data.ipynb  03_stream_sales.ipynb
