[project]
name = "fabric-ipo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
]
